[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Graphics/Blob3.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Graphics/Blob4.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Graphics/Blob1.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Graphics/Blob2.png" type="Texture" id=5]



[sub_resource type="CylinderShape" id=1]
height = 4.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.5, 5, 2.5 )

[node name="Blob" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 4 )
_height = 3.5
_attack_speed = 2.0
_speed = 4
_damage = 0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
billboard = 1
frames = SubResource( 2 )
frame = 2
playing = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="KnockbackTimer" type="Timer" parent="."]

[node name="BlobTimer" type="Timer" parent="."]
autostart = true

[node name="Area" type="Area" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="BlobTimer" to="." method="_on_BlobTimer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
