[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Graphics/Turret3.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Graphics/Turret1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Graphics/Turret2.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]



[sub_resource type="CylinderShape" id=1]
height = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.5, 5, 2.5 )

[sub_resource type="CylinderShape" id=4]
radius = 8.0

[node name="Turret" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 4 )
_type = 2
_health = 2.0
_attack_speed = 5.0
_damage = 0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 3, 0 )
billboard = 1
frames = SubResource( 2 )
frame = 3
playing = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="KnockbackTimer" type="Timer" parent="."]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="DistanceCheck" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DistanceCheck"]
shape = SubResource( 4 )
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="DistanceCheck" to="." method="_on_DistanceCheck_body_entered"]
[connection signal="body_exited" from="DistanceCheck" to="." method="_on_DistanceCheck_body_exited"]
